--- a/index.css
+++ b/index.css
@@ -1,17 +1,27 @@
 h1 {
-    text-align:center;
-    color:rgb(14, 14, 152);
-    font-size: 50px;
+    text-align: center;
 }
 
-#sing {
-    text-align:center;
-    color:white;
-    font-size: 30px;
+#txt_welcome {
+    text-align: center;
+    margin-bottom: 50px;
 }
 
-.img_text {
-    text-align:center;
+.card {
+    text-align: center;
+}
+
+.card_title {
     font-size: 20px;
-    color:white;
+}
+
+.card_button {
+    font-size: 25px;
+    width: 150px;
+    height: 30px;
+}
+
+.card_img {
+    width: 300px;
+    height: 300px;
 }
